Stupid latex escaping escapes me.

--- a/ex21.tex
+++ b/ex21.tex
@@ -156,7 +156,7 @@ These are used to access data in different ways and forms.
 \begin{description}
 \item[->]
 \item[.]
-\item[\[\]] Array index.
+\item|[]| Array index.
 \item[sizeof]
 \item[\& (unary)] Address of.
 \item[* (unary)] Value of.
@@ -182,9 +182,9 @@ raw bits in integers.
 
 \begin{description}
 \item[\& (binary)] Bitwise and.
-\item[\<\<] Shift left.
+\item[<< '<<' >>] Shift left.
 \item[>>] Shift right.
-\item[\^]
+\item[\^{}]
 \item[|]
 \item[~]
 \end{description}
@@ -211,14 +211,14 @@ can also be combined into a compound assignment operator.
 \begin{description}
 \item[=]
 \item[\%=]
-\item[&=]
+\item[\&=]
 \item[*=]
 \item[+=]
 \item[-=]
 \item[/=]
-\item[\<\<=]
+\item[<< '<<=' >>]
 \item[>>=]
-\item[\^=]
+\item[\^{}=]
 \item[|=]
 \end{description}
 
