Got the symbols converted for ex21.

--- a/ex21.tex
+++ b/ex21.tex
@@ -154,9 +154,9 @@ operation.
 These are used to access data in different ways and forms.
 
 \begin{description}
-\item[->]
+\item[-\textgreater{}]
 \item[.]
-\item|[]| Array index.
+\item{[]} Array index.
 \item[sizeof]
 \item[\& (unary)] Address of.
 \item[* (unary)] Value of.
@@ -168,11 +168,11 @@ These handle testing equality and inequality of variables.
 
 \begin{description}
 \item[!=]
-\item[<]
-\item[<=]
+\item[\textless{}]
+\item[\textless{}=]
 \item[==]
-\item[>]
-\item[>=]
+\item[\textgreater{}]
+\item[\textgreater{}=]
 \end{description}
 
 \subsection{Bit Operators}
@@ -182,11 +182,11 @@ raw bits in integers.
 
 \begin{description}
 \item[\& (binary)] Bitwise and.
-\item[<< '<<' >>] Shift left.
-\item[>>] Shift right.
+\item[\textless{}\textless{}] Shift left.
+\item[\textgreater{}\textgreater{}] Shift right.
 \item[\^{}]
-\item[|]
-\item[~]
+\item[$\vert$]
+\item[\textasciitilde{}]
 \end{description}
 
 
@@ -199,7 +199,7 @@ operator carefully, it is very handy.
 \item[!]
 \item[\&\&]
 \item[?:] Ternary truth test, read \verb|X ? Y : Z| as "if X then Y else Z".
-\item[||]
+\item[$\vert\vert$]
 \end{description}
 
 \subsection{Assignment Operators}
@@ -216,10 +216,10 @@ can also be combined into a compound assignment operator.
 \item[+=]
 \item[-=]
 \item[/=]
-\item[<< '<<=' >>]
-\item[>>=]
+\item[\textless{}\textless{}=]
+\item[\textgreater{}\textgreater{}=]
 \item[\^{}=]
-\item[|=]
+\item[$\vert$=]
 \end{description}
 
 \section{Available Control Structures}
