--- a/preamble.tex
+++ b/preamble.tex
@@ -23,6 +23,7 @@
 \usepackage{textcomp}
 \usepackage{listings}
 \usepackage{attrib}
+\usepackage[T1]{fontenc}
 \parskip 7.2pt
 
 \lstset{basicstyle=\ttfamily,
