Minor grammar error.

--- a/introduction.tex
+++ b/introduction.tex
@@ -87,20 +87,21 @@ of trying will make you a better programmer.
 
 \section*{The Core Competencies}
 
-I'm going to guess that you come from a language for weaklings.  One of those
-"usable" languages that lets you get away with sloppy thinking and half-assed
-hackery like Python or Ruby.  Or, maybe you use a language like Lisp that pretends the
-computer is some purely functional fantasy land with padded walls for little babies.
-Maybe you've learned Prolog and you think the entire world should just be a database
+I'm going to guess that you come from a language for weaklings \footnote{If you
+can't tell, I'm just teasing you.}.  One of those "usable" languages that lets
+you get away with sloppy thinking and half-assed hackery like Python or Ruby.
+Or, maybe you use a language like Lisp that pretends the computer is some
+purely functional fantasy land with padded walls for little babies.  Maybe
+you've learned Prolog and you think the entire world should just be a database
 that you walk around in looking for clues.  Even worse, I'm betting you've been
 using an IDE, so your brain is riddled with memory holes and you can't even
-type out an entire function's name without hitting CTRL-SPACE every 3 characters
-you type.
+type out an entire function's name without hitting CTRL-SPACE every 3
+characters you type.
 
-No matter what your background, you are probably bad at four skill that this
-book will try to teach you:
+No matter what your background, you are probably bad at four skills:
 
 \begin{description}
+
 \item[Reading And Writing] This is especially true if you use an IDE, but
     generally I find programmers do too much "skimming" and have problems
     reading for comprehension.  They'll skim code they need to understand
