Puts -- back to render properly as --, not whatever TeX thinks -- is which isn't -- but something stupid from the 1500's when -- mean - or -.

--- a/ex21.tex
+++ b/ex21.tex
@@ -176,8 +176,8 @@ operation.
 \item[+ (unary)] positive number.
 \item[++ (postfix)] increment, then read.
 \item[++ (prefix)] read, then increment.
-\item[-- (postfix)] increment, then read.
-\item[-- (prefix)] read, then increment.
+\item[$--$ (postfix)] increment, then read.
+\item[$--$ (prefix)] read, then increment.
 \item[- (binary)] subtract.
 \item[- (unary)] negative number.
 \end{description}
