Better structure with the CPP moved to where it's covered first, then devpkg as the ex26 mid-term.

--- a/ex20.tex
+++ b/ex20.tex
@@ -139,6 +139,15 @@ The way to read those lines is, "check that A is true and if not say M
 and jump out."
 
 
+\section{How The C Pre-Processor Works}
+
+It's now time for you to get a small introduction to the CPP so that you
+know how these macros actually work.  To do this, I'm going to break down
+the most complex macro from \file{dbg.h} and have you run \program{cpp} so
+you can see what it's actually doing.
+
+More to come...
+
 \section{What You Should See}
 
 When you run this, give it some bogus first parameter and you should see
