A better subsectio title.

--- a/ex20.tex
+++ b/ex20.tex
@@ -154,7 +154,7 @@ That's going to save you hours of debugging later.  See also how it
 prints the error message for you when \ident{errno} is set? Again,
 that will save you hours of debugging.
 
-\section{How The C Pre-Processor Works}
+\section{How The CPP Expands Macros}
 
 It's now time for you to get a small introduction to the CPP so that you
 know how these macros actually work.  To do this, I'm going to break down
