Layout the basics of Ex26.

--- a/ex26.tex
+++ b/ex26.tex
@@ -40,3 +40,29 @@ simple dependency list so it can install all the software that a
 project might need as well.
 
 More to come...
+
+\subsection{The Design}
+
+Explain how we want to design \program{devpkg}
+
+
+\subsection{The Apache Portable Runtime}
+
+Introduce APR and why we're using it, but leave how to use it for the actual exercise.
+
+\section{Project Layout}
+
+Have them make the various files and directories to hold \program{devpkg}.
+
+Explain all the pieces.
+
+\section{The Source Files}
+
+List and explain all the source files they have to enter to make it.
+
+
+\section{The Mid-Term Exam}
+
+Give the list of things they have to change in the above source files
+to complete this section.
+
