First part where they install APR working.

--- a/commands.tex
+++ b/commands.tex
@@ -7,6 +7,7 @@
 \newcommand{\python}[1]{{\it\ttfamily #1}}
 \newcommand{\ruby}[1]{{\it\ttfamily #1}}
 \newcommand{\book}[2]{{\it\ttfamily #1} by {\it #2}}
+\newcommand{\library}[1]{{\it\ttfamily #1}}
 \newcommand{\program}[1]{{\it\ttfamily #1}}
 \newcommand{\krc}{\ident{"K\&R C"} }
 
