--- a/ex26.tex
+++ b/ex26.tex
@@ -85,7 +85,7 @@ should write this into a file by hand, and then run it until it can
 install APR without any errors.
 
 \begin{code}{APR Install Script}
-<< d['code/ex26.1.sh|sh|l'] >>
+<< d['code/ex26.1.sh|pyg|l'] >>
 \end{code}
 
 I'm having you write this script out because this is basically what
