Wrong command for program.

--- a/ex26.tex
+++ b/ex26.tex
@@ -46,7 +46,7 @@ To accomplish this goal \program{devpkg} will have a very simple design:
 \begin{description}
 \item[Use external commands] You'll do most of the work through external
     commands like \program{curl}, \program{git}, and \program{tar}.  This
-    reduces the amount of code \prgram{devpkg} needs to get things done.
+    reduces the amount of code \program{devpkg} needs to get things done.
 \item[Simple File Database] You could easily make it more complex, but to
     start you'll just make a single simple file database at
     \file{/usr/local/.devpkg/db} to keep track of what's installed.
