--- a/ex16.tex
+++ b/ex16.tex
@@ -150,7 +150,7 @@ the pointers and the \func{malloc} system:
     to free the memory.  Figure out the options you need to pass
     to \program{Valgrind} to get it to print how you leaked
     this memory.
-\item Forget to free \ident{who->name} in \func{Person\_print}
+\item Forget to free \ident{who->name} in \func{Person\_destroy}
     and compare the output.  Again, use the right options to 
     see how \program{Valgrind} tells you exactly where you messed
     up.
